Add fox question

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <h4>My favorite color is Green.</h4>
       <h4>My favorite food is Sushi.</h4>
       <h4>If I could be any animal, I would be a giraffe.</h4>
+      <p>What does the fox say? It probably barks</p>
     </div>
   </body>
 </html>
